# 21f-CIS192-final-project

./: README.md  nltk-2.py  nltk.py  pyproject.toml
sentimental_piazza/: db.sqlite3  manage.py
sentimental_piazza/core/: urls.py  views.py
sentimental_piazza/core/templates/core/: class_selection.html  home.html  wc.html
sentimental_piazza/sentimental_piazza/: asgi.py  settings.py  urls.py  wsgi.py
sentimental_piazza/templates/: base.html
sentimental_piazza/util/: api_caller.py  grapher.py  wc.py  wordcloud.py
