[tool.poetry]
name = "21f-cis192-final-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^4.0"
piazza-api = "^0.12.0"
matplotlib = "^3.5.1"
wordcloud = "^1.8.1"
nltk = "^3.6.5"
html2text = "^2020.1.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
